实现了悲观锁和乐观锁方式

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://47.112.35.47:3306/seckill?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=123799m
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
