--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,19 @@ spring.datasource.url=jdbc:mysql://47.112.35.47:3306/seckill?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123799m
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.redis.database=0
+spring.redis.host=47.112.35.47
+spring.redis.port=6379
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8 
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=0
+
+logging.level.com.wzh.seckill.dao:debug
