--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,6 +8,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.redis.database=0
 spring.redis.host=47.112.35.47
 spring.redis.port=6379
+spring.redis.password=foobared
 # 连接池最大连接数（使用负值表示没有限制）
 spring.redis.pool.max-active=8 
 # 连接池最大阻塞等待时间（使用负值表示没有限制）
@@ -18,5 +19,9 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=create_order
+spring.kafka.consumer.auto-offset-reset=earliest
 
 logging.level.com.wzh.seckill.dao:debug
