--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -20,7 +20,7 @@ spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=0
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=localhost:9092,localhost:9093,localhost:9094
 spring.kafka.consumer.group-id=create_order
 spring.kafka.consumer.auto-offset-reset=earliest
 
